# comnumpy

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SER_vs_dpTotT_seg20_SNR18_MCMA.csv  dates_1_seg_10reps_SOP_MCMA_16qam.csv  dates_1_seg_1reps_2_SOP_MCMA_16qam.csv  dates_1_seg_3reps_2_SOP_MCMA_16qam.csv  dates_1_seg_PMD_PDL_Switch_16qam.csv  dates_1_seg_SOP_SOP_compensator_16qam.csv  dates_20_seg_1reps_2_SOP_MCMA_16qam.csv  dates_2_seg_PMD_PDL_CMA_16qam.csv  dates_2seg_PMD_PDL_Switch_16qam.csv  dates_3_seg_1reps_2_SOP_MCMA_16qam.csv  dates_3_seg_PMD_PDL_CMA_16qam.csv  dates_3_seg_PMD_PDL_Switch_16qam.csv  dates_4_seg_PMD_PDL_CMA_16qam.csv  dates_4_seg_PMD_PDL_Switch_16qam.csv  dates_5_seg_PMD_PDL_CMA_16qam.csv  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  tests.yml
_sources/documentation/: index.rst.txt
_sources/examples/: awgn.rst.txt  index.rst.txt  mimo.rst.txt  ofdm.rst.txt  ofdm_papr.rst.txt  optical_fiber_nonlinearity.rst.txt
_sources/getting_started/: first_simulation.rst.txt  index.rst.txt  processor_profiling.rst.txt  who_is_comnumpy_for.rst.txt
_static/css/: custom.css
docs/: conf.py  index.rst
docs/api/: index.rst
docs/examples/: awgn.rst  index.rst  mimo.rst  ofdm_papr.rst  optical_fiber_nonlinearity.rst
docs/getting_started/: contributing.rst  first_simulation.rst  installation.rst  processor_profiling.rst  who_is_comnumpy_for.rst
documentation/: index.html
documentation/core/: channels.html  compensators.html  devices.html  filters.html  generators.html  generics.html  impairments.html  index.html  mappers.html  metrics.html  monitors.html  processors.html  visualizers.html
documentation/mimo/: channels.html  compensators.html  detectors.html  index.html
documentation/ofdm/: chains.html  compensators.html  index.html  metrics.html  predistorders.html  processors.html
documentation/optical/: channels.html  compensators.html  dbp.html  devices.html  index.html  links.html  utils.html
examples/: CD_compensation_part1.py  CD_compensation_part2.py  MIMO_detection.py  NLI_simulation.py  NLI_simulation_2.py  awgn.html  index.html  mimo.html  ofdm.html  ofdm_papr.html  optical_fiber_nonlinearity.html  show_srrc_filter.py  test_CMA.py  test_GSOP.py  test_phase.py
getting_started/: contributing.html  first_simulation.html  index.html  installation.html  processor_profiling.html  who_is_comnumpy_for.html
src/: core.py
(+294 files in other folders)
