[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comnumpy"
version = "0.8"
description = "A Python Library for Communication System Prototyping and Simulation"
authors = [
  { name = "Vincent Choqueuse" },
  { name = "Zahra Hourzadehgharabolagh" },
  { name = "Alexandru Frunza" },
  { name = "Noel Tanguy" },
  { name = "Flavius Miron" },
  { name = "Abraham Sotomayor" },
  { name = "Stephane Azou" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vincentchoqueuse/comnumpy"
Repository = "https://github.com/vincentchoqueuse/comnumpy"
Documentation = "https://vincentchoqueuse.github.io/comnumpy"
BugTracker = "https://github.com/vincentchoqueuse/comnumpy/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]