[build-system]
requires = ["setuptools>=64,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comnumpy"
version = "0.91"
description = "A Python Library for Communication System Prototyping and Simulation"
authors = [
  { name = "Vincent Choqueuse" },
  { name = "Zahra Hourzadehgharabolagh" },
  { name = "Alexandru Frunza" },
  { name = "Noel Tanguy" },
  { name = "Flavius Miron" },
  { name = "Abraham Sotomayor" },
  { name = "Stephane Azou" }
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib",
  "seaborn",
  "tqdm",
]

[project.optional-dependencies]
plot = ["matplotlib", "seaborn"]
dev = ["matplotlib", "seaborn", "tqdm", "sphinx", "pydata-sphinx-theme", "sphinxcontrib-mermaid"]

[project.urls]
Homepage = "https://github.com/vincentchoqueuse/comnumpy"
Repository = "https://github.com/vincentchoqueuse/comnumpy"
Documentation = "https://vincentchoqueuse.github.io/comnumpy"
BugTracker = "https://github.com/vincentchoqueuse/comnumpy/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
comnumpy = ["core/data/*.csv"]

[tool.setuptools.packages.find]
where = ["src"]